# lite_db

./: CMakeLists.txt  client.cpp  data.db  main.cpp  seg_0.db  seg_1.db  setup.yaml
data/cars/: seg_0.db
data/events/: seg_0.db
data/products/: seg_0.db
data/test/: seg_0.db
data/use/: seg_0.db
data/user/: seg_0.db
data/users/: seg_0.db
database/: database.cpp  database.h
server/: tcp_server.cpp  tcp_server.h
storage/: storage.cpp  storage.h
